fea-rs/test-data/compile-tests/mini-latin/bad/languagesystem_order.fea
languagesystem latn TRK;
languagesystem DFLT dflt;
